welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:int= 0
var dejafait:int= 1
while  ( nbpas < dejaFait ){
	avance();
	nbPas=nbPas+1;
}
